# Internship-on-Big-Data-at-III-LIDI

./: Classes.py  README.md  generate_data.sh  main.cluster.py  main.local.py  main.py  pyproject.toml  run_script.sh  seq_solution.py  spark_run.sh  validator.py
