[tool.poetry]
name = "treespark-pps"
version = "0.1.0"
description = ""
authors = ["nahuelherpo <nahuelherpo@gmail.com>"]
license = "free"
readme = "README.md"
packages = [{include = "treespark_pps"}]

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.3.1"
pandas = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
